Updated how image works

--- a/DiscordTest/App.config
+++ b/DiscordTest/App.config
@@ -11,4 +11,12 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="imgur" connectionString="402df92c7bc336c9b17ba618c9edf22e95694821"/>
+    <add name ="matttoken" connectionString="MjI3MjU1OTcyODI4MDIwNzM3.CsDh_Q.RlQMUZoHAsJHbDq1KJJN4t14KJM"/>
+    <add name="mytoken" connectionString="MjI1Mzk4NzgxMzY4MDc0MjQx.Cronaw.PQmHl5-vT8gNNkDrEbbCJszLpQc"/>
+    <add name ="mychannel" connectionString="225363652943937538"/>
+    <add name ="mattschannel" connectionString="227263333898649610"/>
+    <add name ="weathertoken" connectionString="458b06cb384e991e14c7bbd0c2ca1ccc"/>
+  </connectionStrings>
 </configuration>
