--- a/DiscordTest/DiscordTest.csproj
+++ b/DiscordTest/DiscordTest.csproj
@@ -119,16 +119,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="album.cs" />
+    <Compile Include="DataTypes\album.cs" />
     <Compile Include="Images.cs" />
-    <Compile Include="ImgurAPI.cs" />
+    <Compile Include="APIs\ImgurAPI.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="ModuleBuilder.cs" />
     <Compile Include="MyBot.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="weather.cs" />
-    <Compile Include="WebAPI.cs" />
+    <Compile Include="DataTypes\weather.cs" />
+    <Compile Include="APIs\WebAPI.cs" />
+    <Compile Include="Weather.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
