--- a/DiscordTest/DiscordConfig.json
+++ b/DiscordTest/DiscordConfig.json
@@ -2,7 +2,7 @@
   "servers": [
     {
       "name": "George",
-      "token": "MjI1Mzk4NzgxMzY4MDc0MjQx.CsJYFw.t1eY3pNYV18A88BYwLhQtTfCjzY",
+      "token": "MjI1Mzk4NzgxMzY4MDc0MjQx.C1wdSg.CcGJj-riGtMfTG72716JRYbUQGg",
       "channels": [
         {
           "name": "main",
@@ -12,7 +12,7 @@
     },
     {
       "name": "Matt",
-      "token": "MjI3MjU1OTcyODI4MDIwNzM3.CsJYUA.mvFbhJ_B3WRumJOyL4zde6M2Gn0",
+      "token": "MjI3MjU1OTcyODI4MDIwNzM3.C1wc1Q.e34iQ935qc12pTqUd5qnoyv5sv8",
       "channels": [
         {
           "name": "main",
