--- a/DiscordTest/DiscordTest.csproj
+++ b/DiscordTest/DiscordTest.csproj
@@ -135,10 +135,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="APIs\owmAPI.cs" />
-    <Compile Include="Images.cs" />
-    <Compile Include="Magic8.cs" />
-    <Compile Include="Module.cs" />
-    <Compile Include="ModuleBuilder.cs" />
+    <Compile Include="Modules\Images.cs" />
+    <Compile Include="Modules\Magic8.cs" />
+    <Compile Include="Modules\Module.cs" />
+    <Compile Include="Modules\ModuleBuilder.cs" />
     <Compile Include="Modules\Queue\ImgurQueue.cs" />
     <Compile Include="Modules\Queue\Queue.cs" />
     <Compile Include="Modules\Queue\WeatherQueue.cs" />
@@ -146,7 +146,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataTypes\weather.cs" />
-    <Compile Include="Weather.cs" />
+    <Compile Include="Modules\Weather.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
