--- a/DiscordTest/DiscordTest.csproj
+++ b/DiscordTest/DiscordTest.csproj
@@ -134,7 +134,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="APIs\owmAPI.cs" />
     <Compile Include="Modules\Images.cs" />
     <Compile Include="Modules\Magic8.cs" />
     <Compile Include="Modules\Module.cs" />
@@ -145,7 +144,6 @@
     <Compile Include="MyBot.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DataTypes\weather.cs" />
     <Compile Include="Modules\Weather.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -170,21 +168,25 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DiscordConnect\DiscordConnect.csproj">
+    <ProjectReference Include="..\DiscordConnect\gwcDiscordConnect.csproj">
       <Project>{392e84c1-be1c-4a35-a695-22b8686298ce}</Project>
-      <Name>DiscordConnect</Name>
+      <Name>gwcDiscordConnect</Name>
     </ProjectReference>
     <ProjectReference Include="..\FileSystem\gwcFileSystem.csproj">
       <Project>{da1d74f9-6ac1-4bfe-84af-420c942ddb28}</Project>
       <Name>gwcFileSystem</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ImgurConnect\ImgurConnect.csproj">
-      <Project>{3b6d05f8-1189-487d-bbb2-dc6f16bc9f4e}</Project>
-      <Name>ImgurConnect</Name>
+    <ProjectReference Include="..\gwcWeatherConnect\gwcWeatherConnect.csproj">
+      <Project>{4EB90C23-A619-4906-9B73-04BC222B64A6}</Project>
+      <Name>gwcWeatherConnect</Name>
     </ProjectReference>
-    <ProjectReference Include="..\WebConnect\WebConnect.csproj">
+    <ProjectReference Include="..\ImgurConnect\gwcImgurConnect.csproj">
+      <Project>{3b6d05f8-1189-487d-bbb2-dc6f16bc9f4e}</Project>
+      <Name>gwcImgurConnect</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WebConnect\gwcWebConnect.csproj">
       <Project>{5e23e4a0-6e9b-4d02-a776-8210ab8ec33c}</Project>
-      <Name>WebConnect</Name>
+      <Name>gwcWebConnect</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
