--- a/gwcWeatherConnect/gwcWeatherConnect.csproj
+++ b/gwcWeatherConnect/gwcWeatherConnect.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3B6D05F8-1189-487D-BBB2-DC6F16BC9F4E}</ProjectGuid>
+    <ProjectGuid>{4EB90C23-A619-4906-9B73-04BC222B64A6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ImgurConnect</RootNamespace>
-    <AssemblyName>ImgurConnect</AssemblyName>
+    <RootNamespace>gwcWeatherConnect</RootNamespace>
+    <AssemblyName>gwcWeatherConnect</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -44,20 +44,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="album.cs" />
-    <Compile Include="ImgurAPI.cs" />
-    <Compile Include="ImgurToken.cs" />
+    <Compile Include="owmAPI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="refreshJSON.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\WebConnect\WebConnect.csproj">
-      <Project>{5e23e4a0-6e9b-4d02-a776-8210ab8ec33c}</Project>
-      <Name>WebConnect</Name>
-    </ProjectReference>
+    <Compile Include="weather.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WebConnect\gwcWebConnect.csproj">
+      <Project>{5e23e4a0-6e9b-4d02-a776-8210ab8ec33c}</Project>
+      <Name>gwcWebConnect</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
