--- a/gwcWeatherConnect/gwcWeatherConnect.csproj
+++ b/gwcWeatherConnect/gwcWeatherConnect.csproj
@@ -52,7 +52,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\WebConnect\gwcWebConnect.csproj">
+    <ProjectReference Include="..\gwcWebConnect\gwcWebConnect.csproj">
       <Project>{5e23e4a0-6e9b-4d02-a776-8210ab8ec33c}</Project>
       <Name>gwcWebConnect</Name>
     </ProjectReference>
