--- a/gwcImgurConnect/gwcImgurConnect.csproj
+++ b/gwcImgurConnect/gwcImgurConnect.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{392E84C1-BE1C-4A35-A695-22B8686298CE}</ProjectGuid>
+    <ProjectGuid>{3B6D05F8-1189-487D-BBB2-DC6F16BC9F4E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DiscordConnect</RootNamespace>
-    <AssemblyName>DiscordConnect</AssemblyName>
+    <RootNamespace>ImgurConnect</RootNamespace>
+    <AssemblyName>ImgurConnect</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -44,11 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataTypes\Channel.cs" />
-    <Compile Include="DataTypes\Server.cs" />
-    <Compile Include="DataTypes\Servers.cs" />
-    <Compile Include="DiscordConnectInfo.cs" />
+    <Compile Include="album.cs" />
+    <Compile Include="ImgurAPI.cs" />
+    <Compile Include="ImgurToken.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="refreshJSON.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\gwcWebConnect\gwcWebConnect.csproj">
+      <Project>{5e23e4a0-6e9b-4d02-a776-8210ab8ec33c}</Project>
+      <Name>gwcWebConnect</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
