Added Cleverbot to the bot

--- a/DiscordTest/DiscordTest.csproj
+++ b/DiscordTest/DiscordTest.csproj
@@ -134,6 +134,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Modules\Cleverbot.cs" />
     <Compile Include="Modules\Images.cs" />
     <Compile Include="Modules\Magic8.cs" />
     <Compile Include="Modules\Module.cs" />
@@ -168,6 +169,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\gwcCleverbotConnect\gwcCleverbotConnect.csproj">
+      <Project>{012c4391-4287-4498-8010-b01cb02479d4}</Project>
+      <Name>gwcCleverbotConnect</Name>
+    </ProjectReference>
     <ProjectReference Include="..\gwcDiscordConnect\gwcDiscordConnect.csproj">
       <Project>{392e84c1-be1c-4a35-a695-22b8686298ce}</Project>
       <Name>gwcDiscordConnect</Name>
