--- a/gwcImgurConnect/gwcImgurConnect.csproj
+++ b/gwcImgurConnect/gwcImgurConnect.csproj
@@ -44,11 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="album.cs" />
+    <Compile Include="DataTypes\album.cs" />
     <Compile Include="ImgurAPI.cs" />
-    <Compile Include="ImgurToken.cs" />
+    <Compile Include="DataTypes\ImgurToken.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="refreshJSON.cs" />
+    <Compile Include="DataTypes\refreshJSON.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\gwcWebConnect\gwcWebConnect.csproj">
