--- a/gwcWeatherConnect/gwcWeatherConnect.csproj
+++ b/gwcWeatherConnect/gwcWeatherConnect.csproj
@@ -47,6 +47,7 @@
     <Compile Include="owmAPI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="weather.cs" />
+    <Compile Include="WeatherToken.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
