--- a/gwcDiscordConnect/gwcDiscordConnect.csproj
+++ b/gwcDiscordConnect/gwcDiscordConnect.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\gwcFileSystem\gwcFileSystem.csproj">
+      <Project>{DA1D74F9-6AC1-4BFE-84AF-420C942DDB28}</Project>
+      <Name>gwcFileSystem</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
